Fixed emotion display bug, updated CSS and, changed app title

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <title>Listen/Share</title>
+    <title>Authentic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
